---
source: parser/src/tests/error_recovery.rs
assertion_line: 74
expression: "crate::tests::parsing_expr_string(r#\"! (not a)\"#)"
---
Node {
    node: Unary(
        UnaryExpr {
            op: Not,
            operand: Node {
                node: Paren(
                    ParenExpr {
                        expr: Node {
                            node: Unary(
                                UnaryExpr {
                                    op: Not,
                                    operand: Node {
                                        node: Identifier(
                                            Identifier {
                                                names: [
                                                    "a",
                                                ],
                                                pos: [
                                                    Node {
                                                        node: (),
                                                        filename: "",
                                                        line: 1,
                                                        column: 7,
                                                        end_line: 1,
                                                        end_column: 8,
                                                    },
                                                ],
                                                pkgpath: "",
                                                ctx: Load,
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 7,
                                        end_line: 1,
                                        end_column: 8,
                                    },
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 3,
                            end_line: 1,
                            end_column: 8,
                        },
                    },
                ),
                filename: "",
                line: 1,
                column: 2,
                end_line: 1,
                end_column: 9,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 9,
}

